@@ -6,6 +6,12 @@
 #if !defined(_INC_COMIP)
 #define _INC_COMIP
 
+#include <_mingw.h>
+
+#if USE___UUIDOF == 0
+#error No __uuidof support for this target
+#endif
+
 #include <ole2.h>
 #include <malloc.h>
 
